--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.26"
+    "@types/styled-components": "^5.1.26",
+    "jest-watch-typeahead": "^0.6.5"
   }
 }
